tests/NormalTests/paczka2/big_fuzzy/94314707.err
Error in line 20: 1djJy A62 15,78
Error in line 29: GqNMIc A947 48,36
Error in line 23: 1djJy A645 48,4
Error in line 36: A253 A62 44,1
Error in line 30: 1djJy A62 42,2
Error in line 38: GqNMIc A947 137,5
Error in line 44: 1djJy A253 28,0
Error in line 52: rVUk A947 11,1
Error in line 66: tN0lCEAzmI A947 93,1
Error in line 68: GqNMIc A645 30,7
Error in line 76: GqNMIc A62 77,7
Error in line 80: A253 A253 73,1
Error in line 75: rVUk A62 64,2
Error in line 91: A253 A253 51,70
Error in line 89: VvOjy96en A62 78,7
Error in line 81: A253 A62 13,1
Error in line 92: VvOjy96en A947 58,5
Error in line 103: A253 A253 232,7
Error in line 108: 0jF7KVQ4ZL A253 88,1
Error in line 120: tN0lCEAzmI A62 73,3
Error in line 126: rVUk A947 58,2
Error in line 137: VvOjy96en A645 52,7
Error in line 141: VvOjy96en A253 97,2
Error in line 142: VvOjy96en A645 51,7
Error in line 151: 1djJy A62 78,2
Error in line 156: tN0lCEAzmI A253 38,7
Error in line 162: 0jF7KVQ4ZL A253 84,7
Error in line 172: tN0lCEAzmI A253 31,5
Error in line 185: tN0lCEAzmI A947 88,0
Error in line 196: 1djJy A253 451,0
Error in line 198: 1djJy A62 54,2
Error in line 199: 0jF7KVQ4ZL A62 79,1
Error in line 203: tN0lCEAzmI A947 2498,3
Error in line 211: VvOjy96en A947 15,6
Error in line 214: rVUk A62 51,13
Error in line 212: VvOjy96en A62 82,8
Error in line 202: 0jF7KVQ4ZL A947 7,9
Error in line 241: A253 A947 31,6
